Improve site styling

--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FIREStack – Retire Early Smarter</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>FIREStack</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#blog-preview">Blog</a></li>
+        <li><a href="#calculator">Calculator</a></li>
+      </ul>
+    </nav>
     <p>Your guide to Financial Independence & Early Retirement</p>
     <a href="#calculator" class="cta-button">Try the FIRE Calculator</a>
   </header>
