Add interactive retirement calculator

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <section id="calculator">
     <h2>FIRE Calculator</h2>
-    <p>Estimate when you can retire and how much you need to save. [Tool Coming Soon]</p>
+    <p>Estimate when you can retire and how much you need to save with our interactive tool.</p>
     <a href="calculator.html" class="cta-button">Try Now</a>
   </section>
 
